syntax = "proto3";

package balance;

option go_package = "github.com/nktknshn/avito-internship-2022/internal/balance";

import "google/protobuf/empty.proto";

service BalanceService {
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {}
    rpc Deposit(DepositRequest) returns (google.protobuf.Empty) {}
    rpc Reserve(ReserveRequest) returns (google.protobuf.Empty) {}
    rpc ReserveCancel(ReserveCancelRequest) returns (google.protobuf.Empty) {}
    rpc ReserveConfirm(ReserveConfirmRequest) returns (google.protobuf.Empty) {}
    rpc Transfer(TransferRequest) returns (google.protobuf.Empty) {}

    rpc AuthSignIn(AuthSignInRequest) returns (AuthSignInResponse) {}

    rpc ReportTransactions(ReportTransactionsRequest) returns (ReportTransactionsResponse) {}
    rpc ReportRevenue(ReportRevenueRequest) returns (ReportRevenueResponse) {}
}

message GetBalanceRequest {
    int64 user_id = 1;
}

message GetBalanceResponse {
    int64 available = 1;
    int64 reserved = 2;
}

message DepositRequest {
    int64 user_id = 1;
    int64 amount = 2;
    string source = 3;
}

message ReserveRequest {
    int64 user_id = 1;
    int64 product_id = 2;
    string product_title = 3;
    int64 order_id = 4;
    int64 amount = 5;
}

message ReserveCancelRequest {
    int64 user_id = 1;
    int64 order_id = 2;
    int64 product_id = 3;
    int64 amount = 4;
}

message ReserveConfirmRequest {
    int64 user_id = 1;
    int64 order_id = 2;
    int64 product_id = 3;
    int64 amount = 4;
}

message TransferRequest {
    int64 from = 1;
    int64 to = 2;
    int64 amount = 3;
}

message ReportTransactionsRequest {
    int64 user_id = 1;
    string cursor = 2;
    uint64 limit = 3;
    string sorting = 4;
    string sorting_direction = 5;
}

message ReportTransactionsResponse {
    repeated ReportTransactionsTransaction transactions = 1;
    string cursor = 2;
    bool has_more = 3;
}

message ReportTransactionsTransaction {
    oneof transaction {
        ReportTransactionsTransactionDeposit deposit = 1;
        ReportTransactionsTransactionSpend spend = 2;
        ReportTransactionsTransactionTransfer transfer = 3;
    }
}

message ReportTransactionsTransactionDeposit {
    string id = 1;
    int64 amount = 2;
    string source = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
}

message ReportTransactionsTransactionSpend {
    string id = 1;
    int64 account_id = 2;
    int64 order_id = 3;
    int64 product_id = 4;
    string product_title = 5;
    int64 amount = 6;
    string status = 7;
    string created_at = 8;
    string updated_at = 9;
}

message ReportTransactionsTransactionTransfer {
    string id = 1;
    int64 from = 2;
    int64 to = 3;
    int64 amount = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message ReportRevenueRequest {
    int32 year = 1;
    int32 month = 2;
}

message ReportRevenueResponse {
    repeated ReportRevenueRecord records = 1;
}

message ReportRevenueRecord {
    string product_title = 1;
    int64 total_revenue = 2;
}

message AuthSignInRequest {
    string username = 1;
    string password = 2;
}

message AuthSignInResponse {
    string token = 1;
}